--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "start": "serve -s dist",
     "dev": "vite",
     "build": "vite build",
-    "render-build": "npm run build",
     "preview": "vite preview",
-    "start": "vite preview --port 3000 --strictPort"
+    "render-build": "npm install && npm run build"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "serve": "^14.2.4"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
